# MiniProjetJin4

./: .gitignore  CMakeLists.txt  README.md  unitTests.cpp
Demo/: Readme.txt
Modelisation/: diagramme_UML_RuinsOfScience.uxf
mainLauncher/: CMakeLists.txt
resources/: Weapon.json
src/: Button.cpp  Button.h  CMakeLists.txt  Character.cpp  Character.h  CombatState.cpp  CombatState.h  Entity.cpp  Entity.h  Game.cpp  Game.h  MainMenuState.cpp  MainMenuState.h  Player.cpp  Player.h  RessourceManager.cpp  RessourceManager.h  Room.cpp  Room.h  RoomState.cpp  RoomState.h  State.cpp  State.h  VictoryState.cpp  VictoryState.h  Weapon.cpp  Weapon.h  WeaponButton.cpp  WeaponButton.h  myMain.cpp  myMain.h
unitTests/: CMakeLists.txt
